# temezi

./: LICENSE  README.md  peers  stack.yaml  temezi.cabal
src/: Lib.hs
