name:                temezi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/temezi#readme
license:             BSD3
license-file:        LICENSE
author:              Sviatoslav Chumakov
copyright:           2017 Sviatoslav Chumakov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , random
                     , distributed-process
                     , distributed-process-raft
                     , optparse-applicative
                     , containers
                     , bytestring
                     , network-transport
                     , network-transport-tcp
                     , clock
  default-language:    Haskell2010

executable temezi-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , temezi
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/temezi
